@@ -30,11 +30,22 @@
 
 <div class="section">
 <dl>
-<dt>March , 2007</dt>
+<dt>March 27, 2007</dt>
 <dd>Version 2.9.10 is now available for ftp.
 <a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2007-March/002372.html"
 class="mailthread">[Mailing List Thread]</a></dd>
-<dt>October 4, 2006</dt>
+<dt>March 1, 2007</dt>
+<dd>Thanks to Bob Weigel and Nabble, it is now possible to
+<a href="http://www.nabble.com/Octave-f1895.html">search</a> the
+contents of the Octave mailing lists all the way back to the beginning
+of time (around 1992).</dd>
+<dt>December 7, 2006</dt>
+<dd>A new graphics branch of the code is now in the works to keep all
+graphics data in Octave to improve compatibility with Matlab and
+facilitate newer graphics back-ends.
+<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-December/001435.html"
+class="mailthread">[Mailing List Thread]</a></dd>
+<dt>October 2, 2006</dt>
 <dd>Version 2.9.9 is now available for ftp.
 <a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2006-October/000743.html"
 class="mailthread">[Mailing List Thread]</a></dd>
